# myblockchain

mycontract/: Cargo.toml
mycontract/src/: exec.rs  lib.rs  main.rs
mycontract/src/wasm/: mod.rs
substrate/frame/contracts/src/wasm/: mod.rs
