[package]
name = "mycontract"
version = "0.1.0"
authors = ["cezhang52111 <zhangce52111@ruc.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pwasm-utils = { version = "0.12.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
parity-wasm = { version = "0.41.0", default-features = false }
wasmi-validation = { version = "0.3.0", default-features = false }
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-runtime = { path = "../substrate/primitives/runtime", default-features = false }
sp-io = { path = "../substrate/primitives/io", default-features = false }
sp-std = { path = "../substrate/primitives/std", default-features = false }
sp-sandbox = { path = "../substrate/primitives/sandbox", default-features = false }
frame-support = { path = "../substrate/frame/support", default-features = false }
frame-system = { path = "../substrate/frame/system", default-features = false }

[dev-dependencies]
wabt = "0.9.2"
assert_matches = "1.3.0"
hex-literal = "0.2.1"
pallet-balances = { path = "../substrate/frame/balances" }
pallet-timestamp = { path = "../substrate/frame/timestamp" }
pallet-randomness-collective-flip = { path = "../substrate/frame/randomness-collective-flip" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-sandbox/std",
	"frame-support/std",
	"frame-system/std",
	"parity-wasm/std",
	"pwasm-utils/std",
	"wasmi-validation/std",
]